tests/example_policies/testSemanticDiff/policy_a.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-from2-to1
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: app-1
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: app-2
