tests/example_policies/testSemanticDiff/policy_a_ipBlock.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-fromIpBlock-to1
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: app-1
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0     # All destinations
          except:
          - 10.0.0.0/8
