tests/example_policies/testSemanticDiff/policy_common.yaml
# UI -> Command
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-common
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: app-1
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: app-2
